--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -68,18 +68,21 @@ h2.rebeccapurple {
         background: red;
         float: left;
         width: 30%;
+        border: 1px solid black;
     }
 
     .div2 {
         background: yellow;
         float: left;
         width: 30%;
+        border: 1px solid black;
     }
 
     .div3 {
         background: green;
         float: left;
         width: 30%;
+        border: 1px solid black;
     }
 }
 
@@ -94,6 +97,7 @@ One item occupies one row having max column width.
         float: left;
         width: 45%;
         height: 45%;
+        border: 1px solid black;
     }
 
     .div2 {
@@ -102,6 +106,7 @@ One item occupies one row having max column width.
         width: 45%;
         height: 45%;
         margin-bottom: 10%;
+        border: 1px solid black;
     }
 
     .div3 {
@@ -109,6 +114,7 @@ One item occupies one row having max column width.
         clear: both;
         width: 100%;
         height: 45%
+        border: 1px solid black;
     }
 }
 
@@ -124,15 +130,18 @@ One item occupies one row having max column width.
     .div1 {
         background: red;
         width: 100%;
+        border: 1px solid black;
     }
 
     .div2 {
         background: yellow;
         width: 100%;
+        border: 1px solid black;
     }
 
     .div3 {
         background: green;
         width: 100%;
+        border: 1px solid black;
     }
 }
